app/deploy/overlays/stage/resources-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kartograph-app
spec:
  template:
    spec:
      containers:
        - name: app
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 1Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kartograph-dgraph-alpha
spec:
  template:
    spec:
      containers:
        - name: dgraph-alpha
          resources:
            requests:
              cpu: 500m
              memory: 2Gi
            limits:
              cpu: 2000m
              memory: 4Gi
